--- a/Challenges/12-flexbox.html
+++ b/Challenges/12-flexbox.html
@@ -50,8 +50,8 @@
       flex-direction: row;
       justify-content: space-between;
       align-items: center;
-      padding-top: 8px;
-      padding-bottom: 8px;
+      padding-top: 10px;
+      padding-bottom: 10px;
       padding-left: 15px;
       padding-right: 10px;
     }
@@ -61,16 +61,12 @@
     }
 
     .search-box {
-      padding-top: 6px;
-      padding-bottom: 6px;
-      padding-left: 18px;
-      padding-right: 18px;
-      border-radius: 13.5px;
+      padding-top: 10px;
+      padding-bottom: 10px;
+      padding-left: 20px;
+      border-radius: 17.25px;
       border: none;
-      flex: 1;
-      margin-left: 85px;
-      margin-right: 80px;
-      /* font-size: 16px; */
+      width: 500px;
     }
 
     .download-button {
@@ -159,7 +155,7 @@
     <button class="download-button">Download</button>
   </div>
 
-  
+
   <div class="row">
     <img class="profile-picture" src="../images/cats/cat.jpg" alt="">
     <div class="info">
