--- a/youtube.html
+++ b/youtube.html
@@ -14,11 +14,25 @@
 
 <body>
   <div class="header">
-    <div class="left-section">left-section</div>
+    <div class="left-section">
+      <img class="hamburger-menu" src="images/icons/hamburger-menu.svg">
+      <img class="youtube-logo" src="images/logos/youtube-logo.svg">
+    </div>
     <div class="middle-section">
       <input class="search-bar" type="text" placeholder="Search" />
+      <button class="search-button">
+        <img class="search-icon" src="images/icons/search.svg" alt="">
+        </button>
+      <button class="voice-search-button">
+        <img class="voice-search-icon" src="images/icons/voice-search-icon.svg" alt="">
+        </button>
     </div>
-    <div class="right-section">right-section</div>
+    <div class="right-section">
+      <img class="upload-icon" src="images/icons/upload.svg" alt="">
+      <img class="youtube-apps-icon" src="images/icons/youtube-apps.svg" alt="">
+      <img class="notifications-icon" src="images/icons/notifications.svg" alt="">
+      <img class="current-user-picture" src="images/channels/my-channel.jpeg" alt="">
+    </div>
   </div>
   <div class="video-grid">
     <div class="video-preview">
