complete lesson 14 with exercises and challenges

--- a/youtube.html
+++ b/youtube.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="styles/general.css">
   <link rel="stylesheet" href="styles/video.css">
   <link rel="stylesheet" href="styles/header.css">
+  <link rel="stylesheet" href="styles/sidebar.css">
 </head>
 
 <body>
@@ -33,6 +34,9 @@
       <img class="notifications-icon" src="images/icons/notifications.svg" alt="">
       <img class="current-user-picture" src="images/channels/my-channel.jpeg" alt="">
     </div>
+  </div>
+  <div class="sidebar">
+    sidebar
   </div>
   <div class="video-grid">
     <div class="video-preview">
