--- a/position.html
+++ b/position.html
@@ -6,19 +6,20 @@
 </head>
 
 <body style="
-            height: 3000px;
-            padding-top: 60px;
-            padding-left: 80px;
+        height: 3000px;
+        padding-top: 60px;
+        padding-left: 80px;
     ">
 
     <div style="
-            background-color: black;   
-            color: white;
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            height: 50px;
+        background-color: black;   
+        color: white;
+        position: fixed;
+        top: 0px;
+        left: 0;
+        right: 0;
+        height: 50px;
+        z-index: 100;
     ">header</div>
 
     <div style="
@@ -30,20 +31,45 @@
         top: 50px;
         width: 72px;
     ">sidebar
+        <div style="
+            position: absolute;
+            background: red;
+            color: white;
+            top: 0px;
+            right: 0px;
+        ">X</div>
     </div>
 
     <div style="
-            background-color: lightblue;
-            width: 200px;
-            height: 200px;
-            position: static;
-        ">div 1</div>
+        position: absolute;
+        background: red;
+        color: white;
+        top: 60px;
+        right: 10px;
+    ">absolute
+    </div>
+
+    <div style="
+        background-color: lightblue;
+        width: 200px;
+        height: 200px;
+        position: static;
+    ">div 1</div>
 
     <div style="
         background-color: lightpink;
         width: 200px;
         height: 200px;
-    ">div 2</div>
+        position: relative;
+    ">div 2
+        <div style="
+            position: absolute;
+            background: black;
+            color: white;
+            bottom: 10px;
+            right: 10px;
+        ">5:00</div>
+    </div>
 </body>
 
 </html>
