--- a/youtube.html
+++ b/youtube.html
@@ -23,15 +23,20 @@
       <input class="search-bar" type="text" placeholder="Search" />
       <button class="search-button">
         <img class="search-icon" src="images/icons/search.svg" alt="">
-        </button>
+      </button>
       <button class="voice-search-button">
         <img class="voice-search-icon" src="images/icons/voice-search-icon.svg" alt="">
-        </button>
+      </button>
     </div>
     <div class="right-section">
       <img class="upload-icon" src="images/icons/upload.svg" alt="">
       <img class="youtube-apps-icon" src="images/icons/youtube-apps.svg" alt="">
-      <img class="notifications-icon" src="images/icons/notifications.svg" alt="">
+      <div class="notifications-icon-container">
+        <img class="notifications-icon" src="images/icons/notifications.svg" alt="">
+        <div class="notifications-count">
+          3
+        </div>
+      </div>
       <img class="current-user-picture" src="images/channels/my-channel.jpeg" alt="">
     </div>
   </div>
@@ -42,6 +47,7 @@
     <div class="video-preview">
       <div class="thumbnail-row">
         <img class="thumbnail" src="images/thumbnails/thumbnail-1.webp" alt="" />
+        <div class="video-time">14:20</div>
       </div>
       <div class="video-info-grid">
         <div class="channel-picture">
@@ -58,6 +64,7 @@
     <div class="video-preview">
       <div class="thumbnail-row">
         <img class="thumbnail" src="images/thumbnails/thumbnail-2.webp" alt="" />
+        <div class="video-time">8:22</div>
       </div>
       <div class="video-info-grid">
         <div class="channel-picture">
@@ -74,6 +81,7 @@
     <div class="video-preview">
       <div class="thumbnail-row">
         <img class="thumbnail" src="images/thumbnails/thumbnail-3.webp" alt="" />
+        <div class="video-time">9:13</div>
       </div>
       <div class="video-info-grid">
         <div class="channel-picture">
@@ -90,6 +98,7 @@
     <div class="video-preview">
       <div class="thumbnail-row">
         <img class="thumbnail" src="images/thumbnails/thumbnail-4.webp" alt="" />
+        <div class="video-time">22:09</div>
       </div>
       <div class="video-info-grid">
         <div class="channel-picture">
@@ -106,6 +115,7 @@
     <div class="video-preview">
       <div class="thumbnail-row">
         <img class="thumbnail" src="images/thumbnails/thumbnail-5.webp" alt="" />
+        <div class="video-time">11:17</div>
       </div>
       <div class="video-info-grid">
         <div class="channel-picture">
@@ -123,6 +133,7 @@
     <div class="video-preview">
       <div class="thumbnail-row">
         <img class="thumbnail" src="images/thumbnails/thumbnail-6.webp" alt="" />
+        <div class="video-time">19:59</div>
       </div>
       <div class="video-info-grid">
         <div class="channel-picture">
