--- a/youtube.html
+++ b/youtube.html
@@ -23,38 +23,83 @@
       <input class="search-bar" type="text" placeholder="Search" />
       <button class="search-button">
         <img class="search-icon" src="images/icons/search.svg" alt="">
+        <div class="tooltip">Search</div>
       </button>
       <button class="voice-search-button">
         <img class="voice-search-icon" src="images/icons/voice-search-icon.svg" alt="">
+        <div class="tooltip">Search with your voice</div>
       </button>
     </div>
     <div class="right-section">
-      <img class="upload-icon" src="images/icons/upload.svg" alt="">
-      <img class="youtube-apps-icon" src="images/icons/youtube-apps.svg" alt="">
+      <div class="upload-icon-container">
+        <img class="upload-icon" src="images/icons/upload.svg" alt="">
+        <div class="tooltip">Create</div>
+      </div>
+      <div class="youtube-apps-icon-container">
+        <img class="youtube-apps-icon" src="images/icons/youtube-apps.svg" alt="">
+        <div class="tooltip">YouTube apps</div>
+      </div>
       <div class="notifications-icon-container">
         <img class="notifications-icon" src="images/icons/notifications.svg" alt="">
-        <div class="notifications-count">
-          3
-        </div>
+        <div class="notifications-count">3</div>
+        <div class="tooltip">Notifications</div>
       </div>
       <img class="current-user-picture" src="images/channels/my-channel.jpeg" alt="">
     </div>
   </div>
   <div class="sidebar">
-    sidebar
+    <div class="sidebar-link">
+      <img src="./images/icons/home.svg" alt="">
+      <div>Home</div>
+    </div>
+    <div class="sidebar-link">
+      <img src="./images/icons/explore.svg" alt="">
+      <div>Explore</div>
+    </div>
+    <div class="sidebar-link">
+      <img src="./images/icons/subscriptions.svg" alt="">
+      <div>Subscriptions</div>
+    </div>
+    <div class="sidebar-link">
+      <img src="./images/icons/originals.svg" alt="">
+      <div>Originals</div>
+    </div>
+    <div class="sidebar-link">
+      <img src="./images/icons/youtube-music.svg" alt="">
+      <div>Youtube-music</div>
+    </div>
+    <div class="sidebar-link">
+      <img src="./images/icons/library.svg" alt="">
+      <div>Library</div>
+    </div>
   </div>
   <div class="video-grid">
     <div class="video-preview">
       <div class="thumbnail-row">
-        <img class="thumbnail" src="images/thumbnails/thumbnail-1.webp" alt="" />
+        <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY">
+          <img class="thumbnail" src="images/thumbnails/thumbnail-1.webp" alt="" />
+        </a>
         <div class="video-time">14:20</div>
       </div>
       <div class="video-info-grid">
         <div class="channel-picture">
-          <img class="profile-picture" src="images/channels/channel-1.jpeg" alt="">
+          <div class="profile-picture-container">
+            <a href="https://www.youtube.com/c/mkbhd">
+              <img class="profile-picture" src="images/channels/channel-1.jpeg" alt="">
+            </a>
+            <div class="channel-tooltip">
+              <img class="tooltip-channel-picture" src="images/channels/channel-1.jpeg">
+              <div class="tooltip-channel-info">
+                <div class="tooltip-channel-name">Marques Brownlee</div>
+                <div class="tooltip-channel-subscribers">15M subscribers</div>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="video-info">
-          <p class="video-title">Talking Tech and AI with Google CEO Sundar Pichai!</p>
+          <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY">
+            <p class="video-title">Talking Tech and AI with Google CEO Sundar Pichai!</p>
+          </a>
           <p class="video-author">Marques Brownlee</p>
           <p class="video-stats">3.4M views &#183; 6 months ago</p>
         </div>
@@ -63,15 +108,30 @@
 
     <div class="video-preview">
       <div class="thumbnail-row">
-        <img class="thumbnail" src="images/thumbnails/thumbnail-2.webp" alt="" />
+        <a href="https://www.youtube.com/watch?v=mP0RAo9SKZk">
+          <img class="thumbnail" src="images/thumbnails/thumbnail-2.webp" alt="" />
+        </a>
         <div class="video-time">8:22</div>
       </div>
       <div class="video-info-grid">
         <div class="channel-picture">
-          <img class="profile-picture" src="images/channels/channel-2.jpeg" alt="">
+          <div class="profile-picture-container">
+            <a href="https://www.youtube.com/c/markiplier">
+              <img class="profile-picture" src="images/channels/channel-2.jpeg" alt="">
+            </a>
+            <div class="channel-tooltip">
+              <img class="tooltip-channel-picture" src="images/channels/channel-2.jpeg">
+              <div class="tooltip-channel-info">
+                <div class="tooltip-channel-name">Markiplier</div>
+                <div class="tooltip-channel-subscribers">36.7M subscribers</div>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="video-info">
-          <p class="video-title">Try Not To Laugh Challenge #9</p>
+          <a href="https://www.youtube.com/watch?v=mP0RAo9SKZk">
+            <p class="video-title">Try Not To Laugh Challenge #9</p>
+          </a>
           <p class="video-author">Markiplier</p>
           <p class="video-stats">19M views &#183; 4 years ago</p>
         </div>
@@ -80,15 +140,30 @@
 
     <div class="video-preview">
       <div class="thumbnail-row">
-        <img class="thumbnail" src="images/thumbnails/thumbnail-3.webp" alt="" />
+        <a href="https://www.youtube.com/watch?v=FgjPQQeTh1w">
+          <img class="thumbnail" src="images/thumbnails/thumbnail-3.webp" alt="" />
+        </a>
         <div class="video-time">9:13</div>
       </div>
       <div class="video-info-grid">
         <div class="channel-picture">
-          <img class="profile-picture" src="images/channels/channel-3.jpeg" alt="">
+          <div class="profile-picture-container">
+            <a href="https://www.youtube.com/user/SSSniperWolf">
+              <img class="profile-picture" src="images/channels/channel-3.jpeg" alt="">
+            </a>
+            <div class="channel-tooltip">
+              <img class="tooltip-channel-picture" src="images/channels/channel-3.jpeg">
+              <div class="tooltip-channel-info">
+                <div class="tooltip-channel-name">SSSniperWolf</div>
+                <div class="tooltip-channel-subscribers">34.5M subscribers</div>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="video-info">
-          <p class="video-title">Crazy Tik Toks Taken Moments Before DISASTER</p>
+          <a href="https://www.youtube.com/watch?v=FgjPQQeTh1w">
+            <p class="video-title">Crazy Tik Toks Taken Moments Before DISASTER</p>
+          </a>
           <p class="video-author">SSSniperWolf</p>
           <p class="video-stats">12M views &#183; 1 year ago</p>
         </div>
@@ -97,15 +172,30 @@
 
     <div class="video-preview">
       <div class="thumbnail-row">
-        <img class="thumbnail" src="images/thumbnails/thumbnail-4.webp" alt="" />
+        <a href="https://www.youtube.com/watch?v=094y1Z2wpJg">
+          <img class="thumbnail" src="images/thumbnails/thumbnail-4.webp" alt="" />
+        </a>
         <div class="video-time">22:09</div>
       </div>
       <div class="video-info-grid">
         <div class="channel-picture">
-          <img class="profile-picture" src="images/channels/channel-4.jpeg" alt="">
+          <div class="profile-picture-container">
+            <a href="https://www.youtube.com/c/veritasium">
+              <img class="profile-picture" src="images/channels/channel-4.jpeg" alt="">
+            </a>
+            <div class="channel-tooltip">
+              <img class="tooltip-channel-picture" src="images/channels/channel-4.jpeg">
+              <div class="tooltip-channel-info">
+                <div class="tooltip-channel-name">Veritasium</div>
+                <div class="tooltip-channel-subscribers">15.8M subscribers</div>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="video-info">
-          <p class="video-title">The Simplest Math Problem No One Can Solve - Collatz Conjecture</p>
+          <a href="https://www.youtube.com/watch?v=094y1Z2wpJg">
+            <p class="video-title">The Simplest Math Problem No One Can Solve - Collatz Conjecture</p>
+          </a>
           <p class="video-author">Veritasium</p>
           <p class="video-stats">18M views &#183; 4 months ago</p>
         </div>
@@ -114,16 +204,31 @@
 
     <div class="video-preview">
       <div class="thumbnail-row">
-        <img class="thumbnail" src="images/thumbnails/thumbnail-5.webp" alt="" />
+        <a href="https://www.youtube.com/watch?v=86CQq3pKSUw">
+          <img class="thumbnail" src="images/thumbnails/thumbnail-5.webp" alt="" />
+        </a>
         <div class="video-time">11:17</div>
       </div>
       <div class="video-info-grid">
         <div class="channel-picture">
-          <img class="profile-picture" src="images/channels/channel-5.jpeg" alt="">
+          <div class="profile-picture-container">
+            <a href="https://www.youtube.com/c/CSDojo">
+              <img class="profile-picture" src="images/channels/channel-5.jpeg" alt="">
+            </a>
+            <div class="channel-tooltip">
+              <img class="tooltip-channel-picture" src="images/channels/channel-5.jpeg">
+              <div class="tooltip-channel-info">
+                <div class="tooltip-channel-name">CS Dojo</div>
+                <div class="tooltip-channel-subscribers">1.93M subscribers</div>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="video-info">
-          <p class="video-title">Kadane's Algorithm to Maximum Sum Subarray
-            Problem</p>
+          <a href="https://www.youtube.com/watch?v=86CQq3pKSUw">
+            <p class="video-title">Kadane's Algorithm to Maximum Sum Subarray
+              Problem</p>
+          </a>
           <p class="video-author">CS Dojo</p>
           <p class="video-stats">519K views &#183; 5 years ago</p>
         </div>
@@ -132,15 +237,31 @@
 
     <div class="video-preview">
       <div class="thumbnail-row">
-        <img class="thumbnail" src="images/thumbnails/thumbnail-6.webp" alt="" />
+        <a href="https://www.youtube.com/watch?v=yXWw0_UfSFg">
+          <img class="thumbnail" src="images/thumbnails/thumbnail-6.webp" alt="" />
+        </a>
         <div class="video-time">19:59</div>
       </div>
       <div class="video-info-grid">
         <div class="channel-picture">
-          <img class="profile-picture" src="images/channels/channel-6.jpeg" alt="">
+          <div class="profile-picture-container">
+            <a href="https://www.youtube.com/channel/UCX6OQ3DkcsbYNE6H8uQQuVA">
+              <img class="profile-picture" src="images/channels/channel-6.jpeg" alt="">
+            </a>
+            <div class="channel-tooltip">
+              <img class="tooltip-channel-picture" src="images/channels/channel-6.jpeg">
+              <div class="tooltip-channel-info">
+                <div class="tooltip-channel-name">MrBeast</div>
+                <div class="tooltip-channel-subscribers">292M subscribers</div>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="video-info">
-          <p class="video-title">Anything You Can Fit In The Circle I’ll Pay For</p>
+          <a href="https://www.youtube.com/watch?v=yXWw0_UfSFg">
+            <p class="video-title">Anything You Can Fit In The Circle I’ll
+              Pay For</p>
+          </a>
           <p class="video-author">MrBeast</p>
           <p class="video-stats">141M views &#183; 1 year ago</p>
         </div>
